--- a/venues/static/venues/venue_dashboard.css
+++ b/venues/static/venues/venue_dashboard.css
@@ -836,10 +836,9 @@ button {
    ========================== */
 
 /* Modal body centers input */
-.modal-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+[id^="dateRangeModal-"] .modal-body {
+  justify-content:  center;
+  align-items:      center;
 }
 
 /* Outer container alignment */
@@ -893,6 +892,12 @@ body.modal-open {
   font-weight: 500;
 }
 
-.modal-content {
+[id^="dateRangeModal-"] .modal-content {
   border-radius: 10px;
+  padding:       0;
+  margin:        0; 
+}
+
+html {
+    overflow-y: scroll; /* prevent shifting when modal opens */
 }
